--- a/Forecast/app/src/main/AndroidManifest.xml
+++ b/Forecast/app/src/main/AndroidManifest.xml
@@ -32,6 +32,15 @@
         <activity android:name=".activities.CityPickerActivity"
             android:screenOrientation="portrait"/>
 
+        <activity
+            android:name=".widget.WidgetConfigActivity">
+            <intent-filter>
+                <action
+                    android:name="android.appwidget.action.APPWIDGET_CONFIGURE">
+                </action>
+            </intent-filter>
+        </activity>
+
         <receiver android:name=".widget.WeatherWidget" >
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
